--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
@@ -13,6 +13,13 @@ show_date: false
 ---
 Dec. 2022 - Feb. 2024
 
+The Queenstown Public Transport Business Case (PTBC) was ...
+
+I delivered two pieces of work:
+1. The full economics procedure, as detailed by the NZ Transport Agency's MBCM.
+2. The on-demand transit advisory paper.
+
+
 I wrote an advisory paper identifying the potential for on-demand transit services to be included within the proposed
 public transport network for Queenstown.
 I researched local and international case studies, as well as technical literature, then recommended preferred on-demand transit service characteristics for Queenstown’s current, and future strategic, context.
