--- a/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
+++ b/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
@@ -14,5 +14,7 @@ show_date: false
 ---
 Mar. 2023
 
+The Transportation Group (TG) Conference is New Zealand's largest transport conference. - fact check
+
 I presented a 15-minute oral presentation about my initial investigations on light vehicle kilometres travelled for Waka Kotahi NZ Transport Agency.
 The Emissions Reduction Plan (ERP) had a target to reduce total kilometres travelled by the light vehicle fleet by 20 percent by 2035 through improved urban form and providing better travel options, particularly in NZ's largest cities. With a focus on major urban areas, I presented on the feasibility of achieving a 20% reduction in light vehicle (LV) vehicle kilometres travelled (VKT).
