--- a/Engineering/WSP/WSP UK/_posts/2024-12-01-snwrr.md
+++ b/Engineering/WSP/WSP UK/_posts/2024-12-01-snwrr.md
@@ -18,9 +18,12 @@ permalink: /engineering/career/wsp-uk/snwrr
 ---
 Jul. 2024 - Dec. 2024
 
-WSP prepared the Final Business Case (FBC) for the Shrewsbury North West Relief Road (NWRR).
-I worked to deliver the Carbon Management Plan (CMP), a large and complex component of the FBC.
-I also worked to deliver a supplementary report addressing Condition 41 of the planning application.
+WSP were preparing the Final Business Case (FBC) for the Shrewsbury North West Relief Road (NWRR).
+I helped deliver the Carbon Management Plan (CMP), a large and complex component of the FBC, as well as other carbon related components of work such as a supplementary report addressing Condition 41 of the planning application.
+
+Documents are published on the planning application portal.
+I contributed to:
+- {list of documents}
 
 I co-led a client-facing workshop, used Python to automate assessment of user emissions, enabled cordoning and visualisation of where and when user emission impacts were modelled to occur, managed WSP's Ecology teaam's delivery of land use change carbon impacts, managed delivery of the infrastructure carbon assessment, and wrote the CMP.
 Writing the CMP involved collating all results and aspects of carbon impacts, and reporting on the carbon history of the project and improvements made over time.
