--- a/Music/Performance/_posts/2024-11-01-salomon.md
+++ b/Music/Performance/_posts/2024-11-01-salomon.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Salomon Orchestra
+title: "Salomon Orchestra: Mahler Symphony no. 7"
 date:   2024-12-21 11:00:00 +0000
 show_date: false
 tags: 
@@ -9,4 +9,7 @@ tags:
   - Performance
 ---
 
+Mahler's seventh symphony is 
 Salomon Orchestra programme with Mahler 7.
+
+[Salomon]: https://www.salomonorchestra.org/concert-1
