--- a/Engineering/WSP/WSP NZ/_posts/2023-03-01-NZMUGS-2023.md
+++ b/Engineering/WSP/WSP NZ/_posts/2023-03-01-NZMUGS-2023.md
@@ -10,10 +10,11 @@ tags:
   - Data Analysis
   - Conference
   - Presentation
+  - CPD
 show_date: false
 ---
-Mar. 2023
 
-The New Zealand Modelling User Group (NZMUGS) Conference is a transport modelling specific conference.
+The New Zealand Modelling User Group (NZMUGS) Conference is transport modelling specific.
+NZMUGS is a sub-group of the Transportation Group.
 
-Detail presentation...
+
