--- a/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
+++ b/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
@@ -10,9 +10,9 @@ tags:
   - Data Analysis
   - Conference
   - Presentation
+  - CPD
 show_date: false
 ---
-Mar. 2023
 
 The Transportation Group (TG) Conference is New Zealand's largest transport conference. - fact check
 
