--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-CZAF.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-CZAF.md
@@ -11,6 +11,5 @@ tags:
   - Data Visualisation
 show_date: false
 ---
-Date - Date
 
-WSP UK had developed, and presented, their Carbon Zero Appraisal Framework (CZAF).
+WSP UK developed and presented their Carbon Zero Appraisal Framework (CZAF) to WSP's internal international network.
