--- a/Engineering/WSP/WSP UK/_posts/2024-12-01-snwrr.md
+++ b/Engineering/WSP/WSP UK/_posts/2024-12-01-snwrr.md
@@ -16,9 +16,8 @@ tags:
 breadcrumbs: false
 permalink: /engineering/career/wsp-uk/snwrr
 ---
-Jul. 2024 - Dec. 2024
 
-WSP were preparing the Final Business Case (FBC) for the Shrewsbury North West Relief Road (NWRR).
+WSP UK were preparing the Final Business Case (FBC) for the Shrewsbury North West Relief Road (NWRR).
 I helped deliver the Carbon Management Plan (CMP), a large and complex component of the FBC, as well as other carbon related components of work such as a supplementary report addressing Condition 41 of the planning application.
 
 Documents are published on the planning application portal.
