--- a/Engineering/WSP/WSP UK/_posts/2024-12-02-TfN-TEM.md
+++ b/Engineering/WSP/WSP UK/_posts/2024-12-02-TfN-TEM.md
@@ -9,9 +9,8 @@ tags:
   - Python
   - Transport
   - Data Analysis
-breadcrumbs: /engineering/career/wsp-uk/nhrr
-permalink: /engineering/career/wsp-uk/nhrr
 ---
-Jul. 2024 - Dec. 2024
 
+Transport for the North (TfN) is a Subnational Transport Body (STB).
+TfN have developed a Python library called the Common Analytic Framework (CAF).
 The Trip End Model (TEM)...
