--- a/Music/Performance/_posts/2024-11-01-salomon.md
+++ b/Music/Performance/_posts/2024-11-01-salomon.md
@@ -9,7 +9,9 @@ tags:
   - Performance
 ---
 
-Mahler's seventh symphony is 
-Salomon Orchestra programme with Mahler 7.
+Mahler's seventh symphony, which is sometimes referred to as Song of the Night, is composed of five movements.
+I played first violin tutti in Salomon Orchestra's concert of the symphony under Johann Stuckenbruck conducting.
+
+URL: [Salomon Orchestra][Salomon]
 
 [Salomon]: https://www.salomonorchestra.org/concert-1
