--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-LNIRIM.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-LNIRIM.md
@@ -11,6 +11,5 @@ show_date: false
 ---
 Dec. 2022 - Feb. 2024
 
-Lower North Island Rail Integrated Mobility (LNIRIM) is ...
-
+WSP NZ was chosen as the procurement partner for the Lower North Island Rail Integrated Mobility (LNIRIM) programme.
 I prepared the Stakeholder Management Plan (SMP).
