--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
@@ -11,19 +11,21 @@ tags:
   - Data Analysis
 show_date: false
 ---
-Dec. 2022 - Feb. 2024
 
-The Queenstown Public Transport Business Case (PTBC) was ...
+The Queenstown Public Transport Business Case (PTBC) was
 
 I delivered two pieces of work:
 1. The full economics procedure, as detailed by the NZ Transport Agency's MBCM.
 2. The on-demand transit advisory paper.
 
-
-I wrote an advisory paper identifying the potential for on-demand transit services to be included within the proposed
-public transport network for Queenstown.
+I wrote an advisory paper identifying the potential for on-demand transit services to be included within the proposed public transport network for Queenstown.
 I researched local and international case studies, as well as technical literature, then recommended preferred on-demand transit service characteristics for Queenstown’s current, and future strategic, context.
 In preparing recommendations, I considered the demographic and geographic context of the area, identified public transport network gaps, detailed considerations of on-demand transit within a Queenstown context, and assessed the potential for on-demand transit service in diﬀerent local areas.
+See Page 259 of the [QTPTBC Advisory Papers][Advisory Papers].
 
 In addition to the on-demand transit advisory paper, I undertook the economics analysis for the Queenstown
 Transport Business Case in line with Waka Kotahi NZ Transport Agency's full economics procedure.
+
+[QTPTBC]: https://www.orc.govt.nz/your-council/plans-and-strategies/transport-plans-and-policies/queenstown-public-transport-business-case/
+
+[Advisory Papers]: https://www.orc.govt.nz/media/hphfhfgo/queenstown-public-transport-business-case-advisory-papers.pdf
