--- a/Engineering/WSP/WSP UK/_posts/2024-12-02-nhrr.md
+++ b/Engineering/WSP/WSP UK/_posts/2024-12-02-nhrr.md
@@ -16,9 +16,8 @@ tags:
 breadcrumbs: /engineering/career/wsp-uk/nhrr
 permalink: /engineering/career/wsp-uk/nhrr
 ---
-Jul. 2024 - Dec. 2024
 
-The North Hykenham Relief Road (NHRR) Final Business Case (FBC).
+WSP UK he North Hykenham Relief Road (NHRR) Final Business Case (FBC).
 
 The software tool, developed for user emissions assessment, was used by the Strategic Modelling team.
 I led and managed the assessment of carbon associated with land use change.
