--- a/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
+++ b/Engineering/WSP/WSP NZ/_posts/2023-03-01-TG-conference-2023.md
@@ -12,9 +12,14 @@ tags:
   - Presentation
   - CPD
 show_date: false
+order: 2
 ---
 
-The Transportation Group (TG) Conference is New Zealand's largest transport conference. - fact check
+The Transportation Group (TG) Conference is a major New Zealand's transport conference.
+My presentation abstract, and a PDF of the presentation, is available on the [2023 conference website][Speaker List]{:target="_blank"}.
 
-I presented a 15-minute oral presentation about my initial investigations on light vehicle kilometres travelled for Waka Kotahi NZ Transport Agency.
-The Emissions Reduction Plan (ERP) had a target to reduce total kilometres travelled by the light vehicle fleet by 20 percent by 2035 through improved urban form and providing better travel options, particularly in NZ's largest cities. With a focus on major urban areas, I presented on the feasibility of achieving a 20% reduction in light vehicle (LV) vehicle kilometres travelled (VKT).
+I presented a 15-minute oral presentation regarding my initial investigations on light vehicle kilometres travelled for Waka Kotahi NZ Transport Agency.
+The Emissions Reduction Plan had a target to reduce total kilometres travelled by the light vehicle fleet by 20 percent by 2035 through improved urban form and providing better travel options, particularly in NZ's largest cities. 
+With a focus on major urban areas, I presented on the feasibility of achieving a 20% reduction in light vehicle vehicle kilometres travelled.
+
+[Speaker List]: https://harding.eventsair.com/QuickEventWebsitePortal/transportation-2023/agenda/Speaker
