--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
@@ -10,6 +10,7 @@ tags:
   - Decarbonisation
   - Data Analysis
 show_date: false
+order: 3
 ---
 
 The Queenstown Public Transport Business Case (PTBC) was
