--- a/Engineering/WSP/WSP UK/_drafts/2024-12-02-A259.md
+++ b/Engineering/WSP/WSP UK/_drafts/2024-12-02-A259.md
@@ -1,21 +1,16 @@
 ---
 layout: single
-title: A10
+title: A259 Chichester to Bognor Regis
 date:   2024-12-21 11:00:00 +0000
 show_date: false
+order: 6
 tags: 
   - WSP UK
   - Engineering
-  - Python
-  - Dash
   - Transport
   - Decarbonisation
   - Net Zero
-  - Data Analysis
-  - Data Visualisation
-breadcrumbs: /engineering/career/wsp-uk/nhrr
-permalink: /engineering/career/wsp-uk/nhrr
 ---
 Jul. 2024 - Dec. 2024
 
-The A10 
+The A259 Chichester to Bognor Regis...
