--- a/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
+++ b/Engineering/WSP/WSP NZ/_posts/2024-02-01-QPTBC.md
@@ -3,6 +3,7 @@ layout: single
 title: Queenstown Public Transport Business Case
 #date: 2024-12-21 13:06:00 +0000
 tags:
+  - WSP
   - WSP NZ
   - Engineering
   - Python
@@ -10,23 +11,28 @@ tags:
   - Decarbonisation
   - Data Analysis
 show_date: false
-order: 3
+permalink: engineering/wsp-nz/QTPTBC
+sidebar:
+  nav: engineering
 ---
 
-The Queenstown Public Transport Business Case (PTBC) was
+The [Queenstown Public Transport Business Case][QTPTBC Home]{:target="_blank"} focuses on the public transport investment decisions over the next 15 years in the Queenstown area.
 
-I delivered two pieces of work:
-1. The full economics procedure, as detailed by the NZ Transport Agency's MBCM.
+I was responsible for delivering two pieces of work:
+1. The economics analysis.
 2. The on-demand transit advisory paper.
 
-I wrote an advisory paper identifying the potential for on-demand transit services to be included within the proposed public transport network for Queenstown.
+In the [Strategic Business Case][QTPTBC]{:target="_blank"}, see pages 76 for the preferred option economic assessment, and page 56 for the short list cost-benefit analysis.
+See page 259 of the [QTPTBC Advisory Papers][Advisory Papers]{:target="_blank"} to read the on-demand transit advisory paper.
+
+I undertook the economics analysis for the Queenstown PTBC in line with the full economics procedure detailed in NZ Transport Agency's Monetised Benifits and Costs Manual.
+
+The advisory paper I wrote identifies the potential for on-demand transit services to be included within the proposed public transport network for Queenstown.
 I researched local and international case studies, as well as technical literature, then recommended preferred on-demand transit service characteristics for Queenstown’s current, and future strategic, context.
 In preparing recommendations, I considered the demographic and geographic context of the area, identified public transport network gaps, detailed considerations of on-demand transit within a Queenstown context, and assessed the potential for on-demand transit service in diﬀerent local areas.
-See Page 259 of the [QTPTBC Advisory Papers][Advisory Papers].
 
-In addition to the on-demand transit advisory paper, I undertook the economics analysis for the Queenstown
-Transport Business Case in line with Waka Kotahi NZ Transport Agency's full economics procedure.
-
-[QTPTBC]: https://www.orc.govt.nz/your-council/plans-and-strategies/transport-plans-and-policies/queenstown-public-transport-business-case/
+[QTPTBC Home]: https://www.orc.govt.nz/your-council/plans-and-strategies/transport-plans-and-policies/queenstown-public-transport-business-case/
 
 [Advisory Papers]: https://www.orc.govt.nz/media/hphfhfgo/queenstown-public-transport-business-case-advisory-papers.pdf
+
+[QTPTBC]: https://www.orc.govt.nz/media/rasnp1qg/queenstown-public-transport-business-case-final-2024.pdf
