--- a/Engineering/WSP/WSP NZ/_posts/2023-10-01-WTERP.md
+++ b/Engineering/WSP/WSP NZ/_posts/2023-10-01-WTERP.md
@@ -10,9 +10,10 @@ tags:
   - Decarbonisation
   - Data Analysis
 show_date: false
-permalink: permalink: engineering/wsp-nz/wterp-analysis-of-hts-data
+permalink: engineering/wsp-nz/wterp-analysis-of-hts-data
 sidebar:
   nav: engineering
+
 ---
 
 Greater Wellington Regional Council (GWRC) were preparing a Vehicle Kilometres Travelled (VKT), and emissions, reduction strategy for Wellington.
